modules/noosphere/taghmata/nixidy/manifests/prod/excalidraw/Namespace-excalidraw.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: excalidraw
