modules/noosphere/taghmata/nixidy/manifests/prod/excalidraw/Deployment-excalidraw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: excalidraw
  name: excalidraw
  namespace: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      containers:
        - image: excalidraw/excalidraw
          name: excalidraw
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
