modules/noosphere/taghmata/nixidy/manifests/prod/excalidraw/Service-excalidraw.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: excalidraw
  name: excalidraw
  namespace: excalidraw
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: excalidraw
  type: ClusterIP
