modules/noosphere/taghmata/nixidy/manifests/prod/excalidraw/Ingress-excalidraw-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: utils
    glance/description: Draw diagrams
    glance/icon: di:excalidraw
    glance/id: excalidraw
    glance/name: Excalidraw
    glance/parent: excalidraw
    glance/url: https://excalidraw.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: excalidraw-ip-root
  namespace: excalidraw
spec:
  ingressClassName: traefik
  rules:
    - host: excalidraw.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: excalidraw
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - excalidraw.noosphere.uk
      secretName: excalidraw-tls
